<resources>
    <string name="app_name">Inventory Management</string>
    <string name="delete_all">Delete All</string>
    <string name="refresh">Refresh</string>
    <string name="emptyView">Start by adding Items to the Inventory</string>
    <string name="details">Info</string>
    <string name="Buy">Buy</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="addImage">Add Image</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="productName">Product Name</string>
    <string name="add">Add</string>



</resources>
